Make sure table flex/grid items recalculate min/max widths.

We used to rely on this taking place lazily via
MinPreferredLogicalWidth(), but that method won't necessarily be called
if the table is a flex/grid item.

Bug: 810327
Change-Id: Ic817bd109544d4b9e961552d0a3a38f127e6e548
Reviewed-on: https://chromium-review.googlesource.com/1000781
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Reviewed-by: David Grogan <dgrogan@chromium.org>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549479}
Former-commit-id: 6b335696ddcf6980440759a57400c34db42a1a05